Final Propose Day page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+  <button onclick="alert('You just made me the happiest person 😘❤️')">
+    <button onclick="alert('You just said YES 😭❤️ This moment means everything to me 💍')">
 <head>
   <meta charset="UTF-8">
   <title>Happy Propose Day ❤️</title>
