--- a/index.html
+++ b/index.html
@@ -1,75 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
-  <button onclick="alert('You just made me the happiest person 😘❤️')">
-    <button onclick="alert('You just said YES 😭❤️ This moment means everything to me 💍')">
 <head>
-  <meta charset="UTF-8">
-  <title>Happy Propose Day ❤️</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
-      font-family: 'Segoe UI', sans-serif;
-      text-align: center;
-      padding: 40px;
-      color: #fff;
-    }
-    .card {
-      background: rgba(255,255,255,0.15);
-      border-radius: 20px;
-      padding: 30px;
-      max-width: 500px;
-      margin: auto;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
-    }
-    h1 {
-      font-size: 2.5em;
-      margin-bottom: 10px;
-    }
-    p {
-      font-size: 1.2em;
-      line-height: 1.6;
-    }
-    .heart {
-      font-size: 60px;
-      animation: beat 1s infinite;
-    }
-    @keyframes beat {
-      0%, 100% { transform: scale(1); }
-      50% { transform: scale(1.2); }
-    }
-    button {
-      margin-top: 20px;
-      padding: 12px 25px;
-      font-size: 18px;
-      border: none;
-      border-radius: 30px;
-      background: #ff4b5c;
-      color: white;
-      cursor: pointer;
-    }
-    button:hover {
-      background: #ff1e38;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>Happy Propose Day 💖</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<style>
+body {
+  margin: 0;
+  font-family: 'Segoe UI', sans-serif;
+  background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  text-align: center;
+}
+
+.card {
+  background: rgba(255,255,255,0.15);
+  padding: 35px;
+  border-radius: 25px;
+  max-width: 420px;
+  box-shadow: 0 15px 40px rgba(0,0,0,0.2);
+}
+
+.heart {
+  font-size: 60px;
+  animation: beat 1s infinite;
+}
+
+@keyframes beat {
+  0%,100% { transform: scale(1); }
+  50% { transform: scale(1.2); }
+}
+
+h1 {
+  font-size: 2.2em;
+  margin-bottom: 10px;
+}
+
+p {
+  font-size: 1.1em;
+  line-height: 1.6;
+  margin: 15px 0;
+}
+
+button {
+  margin-top: 20px;
+  padding: 14px 28px;
+  font-size: 1.1em;
+  border: none;
+  border-radius: 30px;
+  background: #ff4f81;
+  color: white;
+  cursor: pointer;
+  box-shadow: 0 8px 20px rgba(255,79,129,0.4);
+}
+
+button:hover {
+  background: #ff2f6d;
+}
+
+.hidden {
+  display: none;
+}
+</style>
 </head>
+
 <body>
 
-  <div class="card">
-    <div class="heart">❤️</div>
-    <h1>Happy Propose Day, Sadiq 💖</h1>
-    <p>
-      From the moment you came into my life,  
-      everything felt warmer, brighter, and happier.
-    </p>
-    <p>
-      So today, I just want to ask you one thing…
-    </p>
-    <h2>Will you be mine? 💍</h2>
-    <button onclick="alert('You just made me the happiest person 🥹❤️')">
-      YES 💕
-    </button>
-  </div>
+<div class="card">
+  <div class="heart">❤️</div>
+
+  <h1>Happy Propose Day, Sadiq 💖</h1>
+
+  <p>
+    From the day you came into my life,  
+    everything felt a little warmer,  
+    a little brighter, and a lot more meaningful.
+  </p>
+
+  <p>
+    I may not say it every day,  
+    but you mean more to me than words can ever explain.
+  </p>
+
+  <p>
+    So today, with all my heart,  
+    I just want to ask you one simple thing…
+  </p>
+
+  <h2>Will you be mine? 💍</h2>
+
+  <button onclick="sayYes()">YES 💖</button>
+
+  <p id="finalMessage" class="hidden">
+    You just made my heart smile forever 🥹❤️  
+    This moment means everything to me.
+  </p>
+</div>
+
+<!-- Background Music -->
+<audio id="music" loop>
+  <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
+</audio>
+
+<script>
+function sayYes() {
+  document.getElementById("music").play();
+  document.getElementById("finalMessage").classList.remove("hidden");
+  alert("You just said YES 💖 This is my favorite moment 🥹");
+}
+</script>
 
 </body>
 </html>
