--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Happy Propose Day 💖</title>
+<title>For You 💖</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
@@ -18,6 +18,7 @@ body {
   text-align: center;
 }
 
+/* COMMON CARD */
 .card {
   background: rgba(255,255,255,0.15);
   padding: 35px;
@@ -26,6 +27,7 @@ body {
   box-shadow: 0 15px 40px rgba(0,0,0,0.2);
 }
 
+/* HEART */
 .heart {
   font-size: 60px;
   animation: beat 1s infinite;
@@ -36,6 +38,7 @@ body {
   50% { transform: scale(1.2); }
 }
 
+/* TEXT */
 h1 {
   font-size: 2.2em;
   margin-bottom: 10px;
@@ -47,6 +50,7 @@ p {
   margin: 15px 0;
 }
 
+/* BUTTON */
 button {
   margin-top: 20px;
   padding: 14px 28px;
@@ -63,6 +67,7 @@ button:hover {
   background: #ff2f6d;
 }
 
+/* HIDE */
 .hidden {
   display: none;
 }
@@ -71,25 +76,37 @@ button:hover {
 
 <body>
 
-<div class="card">
+<!-- INTRO SCREEN -->
+<div class="card" id="intro">
   <div class="heart">❤️</div>
+  <h1>Hello my love…</h1>
+  <p>
+    I made something special just for you.  
+    Please take a deep breath,  
+    and open this with your heart 💕
+  </p>
+  <button onclick="enterSite()">Tap to Continue 💖</button>
+</div>
 
+<!-- MAIN PROPOSAL SCREEN -->
+<div class="card hidden" id="proposal">
+  <div class="heart">❤️</div>
   <h1>Happy Propose Day, Sadiq 💖</h1>
 
   <p>
-    From the day you came into my life,  
-    everything felt a little warmer,  
-    a little brighter, and a lot more meaningful.
+    From the moment you came into my life,  
+    everything felt warmer, brighter,  
+    and more meaningful.
   </p>
 
   <p>
     I may not say it every day,  
-    but you mean more to me than words can ever explain.
+    but you truly mean a lot to me.
   </p>
 
   <p>
     So today, with all my heart,  
-    I just want to ask you one simple thing…
+    I just want to ask you one thing…
   </p>
 
   <h2>Will you be mine? 💍</h2>
@@ -102,18 +119,10 @@ button:hover {
   </p>
 </div>
 
-<!-- Background Music -->
+<!-- MUSIC -->
 <audio id="music" loop>
   <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
 </audio>
 
 <script>
-function sayYes() {
-  document.getElementById("music").play();
-  document.getElementById("finalMessage").classList.remove("hidden");
-  alert("You just said YES 💖 This is my favorite moment 🥹");
-}
-</script>
-
-</body>
-</html>
+function enterSite
